samples/_failures_safe/1761526197_2cde24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f121942.c: In function ‘main’:
./samples/SAFE/__tmp_6f121942.c:133:26: error: unterminated argument list invoking macro "MATRIX_PRINT"
  133 |     MATRIX_PRINT(matrix2,
      |                          ^
./samples/SAFE/__tmp_6f121942.c:133:5: error: ‘MATRIX_PRINT’ undeclared (first use in this function)
  133 |     MATRIX_PRINT(matrix2,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_6f121942.c:133:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6f121942.c:133:17: error: expected ‘;’ at end of input
  133 |     MATRIX_PRINT(matrix2,
      |                 ^
      |                 ;
./samples/SAFE/__tmp_6f121942.c:133:5: error: expected declaration or statement at end of input
  133 |     MATRIX_PRINT(matrix2,
      |     ^~~~~~~~~~~~
